--- a/index.html
+++ b/index.html
@@ -1,189 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content=
-		"width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="index.css">
-	<title>Landing Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI Landing Page</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<nav>
-		<div class="heading">Landing Page</div>
-		<span class="sideMenuButton"
-			onclick="openNavbar()">
-			☰
-		</span>
+    <header>
+        <nav>
+            <div class="logo">AI Company</div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-		<div class="navbar">
-			<ul>
-				<li><a href="#Home">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Sign Up</a></li>
-			</ul>
-		</div>
-	</nav>
+    <section class="hero">
+        <div class="hero-text">
+            <h1>Welcome to AI Company</h1>
+            <p>Your Partner in Artificial Intelligence Solutions</p>
+            <a href="#contact" class="btn">Contact Us</a>
+        </div>
+    </section>
 
-	<!-- Side navigation bar for
-		responsive website -->
-	<div class="sideNavigationBar"
-		id="sideNavigationBar">
-		<a href="#" class="closeButton"
-			onclick="closeNavbar()">
-			
-		</a>
-		<a href="#">Home</a>
-		<a href="#">About</a>
-		<a href="#">Sign Up</a>
-	</div>
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>At Astatine AI Innovations, we are at the forefront of the Artificial Intelligence revolution,
+        pioneering innovative solutions that transform businesses and industries. 
+        Our journey began with a simple yet powerful belief - that AI 
+        has the potential to redefine how we live and work, 
+        making the complex simple and the impossible achievable.</p>
+    </section>
 
-	<!-- Content -->
-	<div class="line" id="Home">
-		<div class="side1">
-			<h1>GeeksforGeeks</h1>
-			<button>
-				<a href=
-"https://www.geeksforgeeks.org/">
-					Explore More
-				</a>
-			</button>
-		</div>
-		<div class="side2">
-			<img src= "HTML-Tutorial.png"
-				width="500">
-		</div>
-	</div>
+    <section id="services" class="services">
+        <div class="service">
+            <h2>Our Services</h2>
+            <p>AI Innovations specializes in a wide range of AI applications, including:</p>
+        </div>
+        <div class="service">
+            <h3>Machine Learning</h3>
+            <p>We offer cutting-edge machine learning solutions for businesses.</p>
+        </div>
+        <div class="service">
+            <h3>Natural Language Processing</h3>
+            <p>Transform unstructured text into meaningful insights with our NLP expertise.</p>
+        </div>
+        <div class="service">
+            <h3>Computer Vision</h3>
+            <p>We create vision-based AI solutions that can interpret images and videos,
+                     from autonomous vehicles to facial recognition systems.</p>
+        </div>
+        <div class="service">
+            <h3>Computer Vision</h3>
+            <p>Our team provides strategic guidance on how AI can be integrated into your business processes,
+                 unlocking new opportunities for growth and efficiency.</p>
+        </div>
+    </section>
 
-	<section class="about" id="My Projects">
-		<div class="content">
-			<div class="title">
-				<span>Courses</span>
-			</div>
-			<div class="boxes">
-				<div class="box">
-					<div class="topic">
-						<a href="" target="_blank">
-							DSA
-						</a>
-					</div>
-					<p>
-						The term DSA stands for Data
-						Structures and Algorithms. As
-						the name itself suggests, it
-						is a combination of two
-						separate yet interrelated
-						topics.
-					</p>
-				</div>
-				<div class="box">
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <form id="contact-form">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
 
-					<div class="topic">
-						<a href="" target="_blank">
-							HTML
-						</a>
-					</div>
-					<p>
-						HTML stands for HyperText
-						Markup Language. It is used
-						to design web pages using
-						the markup language.
-					</p>
-				</div>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
 
-				<div class="box">
-					<div class="topic">
-						<a href="" target="_blank">
-							Javascript
-						</a>
-					</div>
-					<p>
-						JavaScript (JS) is the most
-						popular lightweight, interpreted
-						compiled programming language.
-					</p>
-				</div>
-			</div>
-		</div>
-	</section>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
 
-	<section class="contact" id="contact">
-		<div class="content">
-			<div class="title"><span>Sign Up</span></div>
-			<div class="contactMenu">
-				<div class="input1">
-					<div class="label1">Your Name</div>
-					<div class="input2">
-						<input type="text"
-							placeholder="Enter your Name here">
-					</div>
-					<div class="label1">
-						<label>Your Email</label>
-					</div>
-					<div class="input2">
-						<input type="text"
-							placeholder="Enter your Email here">
-					</div>
-					<div class="label1">
-						<label>Your Password</label>
-					</div>
-					<div class="input2">
-						<input type="text"
-							placeholder="Enter your Password here">
-					</div>
-					<div class="button">
-						<button>Sign Up</button>
-					</div>
-				</div>
-				<div class="input3">
-					<div class="rightside1">
-						<div class="title1">
-							<span>
-								Contact Us
-							</span>
-						</div>
-						<div class="content1">
-							A-143, 9th Floor, Sovereign
-							Corporate Tower, Sector-136,
-							Noida, Uttar Pradesh - 201305
-						</div>
-						<div class="title1">
-							<span>More Information</span>
-						</div>
-						<div class="content1">
-							Greetings to all the Geeks out there!
-							We welcome you to the platform where we
-							consistently strive to offer the best
-							of education. This platform has been
-							designed for every geek wishing to
-							expand their knowledge, share their
-							knowledge and is ready to grab their
-							dream job. We have millions of articles,
-							live as well as online courses, thousands
-							of tutorials and much more just for the
-							geek inside you.Thank you for choosing
-							and supporting us!
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Footer section -->
-	<footer>
-		<div class="footer">
-			<span>
-				Created By
-				<a href="https://www.geeksforgeeks.org/"
-					target="_blank">
-					GeeksforGeeks
-				</a>
-			</span>
-		</div>
-	</footer>
-	<script src="index.js"></script>
+            <button type="submit" class="btn">Submit</button>
+        </form>
+    </section>
+
+    <!-- Footer styles -->
+<footer>
+    <div class="social-icons">
+        <a href="https://in.linkedin.com/in/himanshu-menghani-926394182" target="_blank" class="icon-link">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://github.com/524himanshu/" target="_blank" class="icon-link">
+            <i class="fab fa-github"></i>
+        </a>
+        <p>&copy; 2023 Astatine AI Company</p>
+    </div>
+    
+</footer>
+
+
+    <script src="script.js"></script>
 </body>
-
 </html>
