--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Landing Page</title>
+    <title>Astatine AI Solutions </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,7 +21,7 @@
 
     <section class="hero">
         <div class="hero-text">
-            <h1>Welcome to AI Company</h1>
+            <h1>Welcome to Astatine AI Company</h1>
             <p>Your Partner in Artificial Intelligence Solutions</p>
             <a href="#contact" class="btn">Contact Us</a>
         </div>
