--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#choose">Why Choose Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
