--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="services" class="services">
         <div class="service">
             <h2>Our Services</h2>
-            <p>AI Innovations specializes in a wide range of AI applications, including:</p>
+            <p>Astatine AI Solutions specializes in a wide range of AI applications, including:</p>
         </div>
         <div class="service">
             <h3>Machine Learning</h3>
