--- a/Task-02/index.html
+++ b/Task-02/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>To-Do List</title>
+    <title>Website Project Tasks</title>
 </head>
 <body>
     <header>
-        <h1>To-Do List</h1>
+        <h1>Website Project Tasks</h1>
     </header>
     <main>
         <div class="task-form">
             <input type="text" id="task-input" placeholder="Add a new task...">
+            <input type="date" id="deadline-input">
+            <select id="priority-input">
+                <option value="low">Low Priority</option>
+                <option value="medium">Medium Priority</option>
+                <option value="high">High Priority</option>
+            </select>
+            <input type="text" id="label-input" placeholder="Add labels...">
             <button id="add-task">Add</button>
         </div>
         <ul id="task-list">
